--- a/Autre/navbar_autre.html
+++ b/Autre/navbar_autre.html
@@ -32,8 +32,8 @@
     <li>
       <a href="#">Autres (Hardware et Technique) ▼</a>
       <ul>
-        <li><a href="Motorisation.html">Motorisation</a></li>
-        <li><a href="Articulation.html">Articulation</a></li>
+        <li><a href="Autre/Motorisation.html">Motorisation</a></li>
+        <li><a href="Autre/Articulation.html">Articulation</a></li>
       </ul>
     </li>
     <li><a href="../A_propos.html">À propos</a></li>
