--- a/Autre/navbar_autre.html
+++ b/Autre/navbar_autre.html
@@ -17,7 +17,7 @@
       </ul>
     </li>
      <li>
-      <a href="Vision_ordinateur.html" class="active">Vision par Ordinateur </a>
+      <a href="Vision_ordinateur.html">Vision par Ordinateur </a>
     </li>
     <li>
       <a href="#">Automatisme et Automatique ▼</a>
@@ -30,10 +30,10 @@
       </ul>
     </li>
     <li>
-      <a href="#">Autres (Hardware et Technique) ▼</a>
+      <a href="#" class="active">Autres (Hardware et Technique) ▼</a>
       <ul>
-        <li><a href="Autre/Motorisation.html">Motorisation</a></li>
-        <li><a href="Autre/Articulation.html">Articulation</a></li>
+        <li><a href="Motorisation.html">Motorisation</a></li>
+        <li><a href="Articulation.html">Articulation</a></li>
       </ul>
     </li>
     <li><a href="../A_propos.html">À propos</a></li>
