--- a/Autre/navbar_autre.html
+++ b/Autre/navbar_autre.html
@@ -16,7 +16,7 @@
       </ul>
     </li>
      <li>
-      <a href="Vision_ordinateur.html">Vision par Ordinateur </a>
+      <a href="../Vision/Vision_ordinateur.html">Vision par Ordinateur </a>
     </li>
     <li>
       <a href="#">Automatisme et Automatique ▼</a>
