--- a/Autre/Motorisation.html
+++ b/Autre/Motorisation.html
@@ -790,10 +790,10 @@
     La <strong>commande vectorielle</strong>, ou <em>Field-Oriented Control (FOC)</em>, est une technique
     avancée pour contrôler les moteurs AC ou brushless avec précision. L'idée principale est de
     découpler le contrôle du <strong>couple</strong> et du <strong>flux magnétique</strong> du rotor, 
-    comme dans un moteur DC, même pour un moteur AC.
+    comme dans un moteur DC, mais pour un moteur AC.
     </p>
     
-    <h4>1. Transformation en référentiel rotorique</h4>
+    <h4> Transformation en référentiel rotorique</h4>
     <p>
     Le courant triphasé du stator \((i_a, i_b, i_c)\) est transformé en un système à deux axes
     orthogonaux dans le référentiel tournant du rotor (axes <strong>d</strong> et <strong>q</strong>) :
@@ -816,7 +816,7 @@
     - \(\theta\) : angle du rotor
     </p>
     
-    <h4>2. Relation courant → couple et flux</h4>
+    <h4>Relation courant → couple et flux</h4>
     <p>
     Dans ce référentiel, le couple du moteur est directement proportionnel au courant \(i_q\) :
     </p>
@@ -994,4 +994,5 @@
 </body>
 
 </html>
+
 
