--- a/Autre/Motorisation.html
+++ b/Autre/Motorisation.html
@@ -507,6 +507,8 @@
     <hr>
     <h2>Concepts importants</h2>
 
+    
+
    <h3>Glissement (Slip) dans les moteurs électriques</h3>
 
    <img src="slip.png">
@@ -560,39 +562,23 @@
     à une vitesse constante appelée vitesse de synchronisme.
     </p>
 
-    <ul>
-      <li>
-        <strong>Création du RMF</strong> : des courants sinusoïdaux déphasés de 120° dans les bobinages
-        du stator produisent un champ magnétique tournant uniforme
-      </li>
-      <li>
-        <strong>Vitesse du RMF</strong> : elle dépend uniquement de la fréquence d’alimentation et du
-        nombre de paires de pôles, selon la relation
-        \[
-        n_s = \frac{60 \cdot f}{p}
-        \]
-      </li>
-      <li>
-        <strong>Interaction avec le rotor</strong> : le RMF induit des courants dans le rotor (moteur
-        asynchrone) ou s’accroche au champ du rotor (moteur synchrone) pour produire le couple
-      </li>
-    </ul>
+    <p>
+      Une video pour comprendre plus en détail : <a href="https://www.youtube.com/watch?v=wqrGHeuxUvI">ici</a>.
+    </p>
 
     <p>
     Le nombre de champs magnétiques (ou plus précisément le nombre de pôles du champ tournant)
     dans un moteur électrique est déterminé par la manière dont les bobinages du stator sont
     conçus et connectés. En modifiant la disposition des enroulements ou leur mode de connexion
     (par exemple par un couplage Dahlander), il est possible de changer le nombre de pôles et
-    donc la vitesse de synchronisme du champ magnétique tournant. Dans les systèmes modernes
-    pilotés par variateur de vitesse, le nombre de pôles est généralement fixe, et la vitesse est
-    principalement contrôlée en ajustant la fréquence d’alimentation, tandis que la structure
-    du bobinage fixe le nombre de champs disponibles.
+    donc la vitesse de synchronisme du champ magnétique tournant. Une fois le bobinage compris,
+    la forme du RMF deviens instinctive.
     </p>
-
 
     <p>
-      Une video pour comprendre plus en détail : <a href="https://www.youtube.com/watch?v=wqrGHeuxUvI">ici</a>.
+      Une video pour comprendre plus en détail : <a href="https://www.youtube.com/watch?v=H6HYSpu7ZJk">ici</a>.
     </p>
+    
 
     <h3>Force électromotrice de retour (Back EMF)</h3>
 
@@ -994,5 +980,6 @@
 </body>
 
 </html>
+
 
 
