--- a/Vision/navbar_vision.html
+++ b/Vision/navbar_vision.html
@@ -23,7 +23,7 @@
       <ul>
         <li><a href="../Automatique/PLC_Com/PLC_COM.html">PLC : Protocole de COM </a></li>
         <li><a href="../Automatique/PLC_Composants/Composant.html">PLC : Composant</a></li>
-        <li><a href="../Automatique/PLC_Language/PLC_Prog.html">PLC : Language de Programmation </a></li>
+        <li><a href="../Automatique/PLC_Language/PLC_Prog.html">PLC : Langage de Programmation </a></li>
       </ul>
     </li>
     <li>
