--- a/Automatique/PLC_Com/navbar_plc_com.html
+++ b/Automatique/PLC_Com/navbar_plc_com.html
@@ -23,7 +23,7 @@
        <ul>
         <li><a href="PLC_COM.html">PLC : Protocole de COM </a></li>
         <li><a href="../PLC_Composants/Composant.html">PLC : Composant</a></li>
-        <li><a href="../PLC_Language/PLC_Prog.html">PLC : Language de Programmation </a></li>
+        <li><a href="../PLC_Language/PLC_Prog.html">PLC : Langage de Programmation </a></li>
       </ul>
     </li>
     <li>
