--- a/Automatique/PLC_Composants/navbar_plc_composant.html
+++ b/Automatique/PLC_Composants/navbar_plc_composant.html
@@ -23,7 +23,7 @@
       <ul>
         <li><a href="../PLC_Com/PLC_COM.html">PLC : Protocole de COM </a></li>
         <li><a href="Composant.html">PLC : Composant</a></li>
-        <li><a href="../PLC_Language/PLC_Prog.html">PLC : Language de Programmation </a></li>
+        <li><a href="../PLC_Language/PLC_Prog.html">PLC : Langage de Programmation </a></li>
       </ul>
     </li>
     <li>
